extends CanvasLayer

onready var readout = $Readout
onready var system_details = $SystemDetails
onready var build_menu = $BuildMenu
onready var interstellar_selection = $InterstellarSelection
onready var error_alert = $ErrorAlert
onready var dialogue = $Dialogue

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
